--- a/config/database.yml
+++ b/config/database.yml
@@ -17,9 +17,7 @@ test:
 production:
   primary: &primary_production
     <<: *default
-    database: xmas_production
-    username: xmas
-    password: <%= ENV["XMAS_DATABASE_PASSWORD"] %>
+    database: <%= ENV['DATABASE_URL'] %>
   cache:
     <<: *primary_production
     database: xmas_production_cache
