--- a/config/database.yml
+++ b/config/database.yml
@@ -17,6 +17,8 @@ test:
 production:
   primary: &primary_production
     <<: *default
+    username: <%= ENV['DB_USERNAME'] %>
+    password: <%= ENV['DB_PASSWORD'] %>
     database: <%= ENV['DATABASE_URL'] %>
   cache:
     <<: *primary_production
