--- a/config/database.yml
+++ b/config/database.yml
@@ -15,17 +15,17 @@ test:
   database: xmas_test
 
 production:
-  primary: &primary_production
-    adapter: postgresql
-    encoding: unicode
-    database: <%= ENV['DATABASE_URL'] %>
-    pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  pool: 5
+  database: <%= ENV['DATABASE_URL'] %>
   cache:
-    <<: *primary_production
+    pool: 5
+    database: xmas_production_cache
     migrations_paths: db/cache_migrate
   queue:
-    <<: *primary_production
+    pool: 5
+    database: xmas_production_queue
     migrations_paths: db/queue_migrate
   cable:
-    <<: *primary_production
+    pool: 5
+    database: xmas_production_cable
     migrations_paths: db/cable_migrate
