--- a/config/database.yml
+++ b/config/database.yml
@@ -18,14 +18,20 @@ production:
   pool: 5
   database: <%= ENV['DATABASE_URL'] %>
   cache:
+    adapter: postgresql
+    encoding: unicode
     pool: 5
     database: xmas_production_cache
     migrations_paths: db/cache_migrate
   queue:
+    adapter: postgresql
+    encoding: unicode
     pool: 5
     database: xmas_production_queue
     migrations_paths: db/queue_migrate
   cable:
+    adapter: postgresql
+    encoding: unicode
     pool: 5
     database: xmas_production_cable
     migrations_paths: db/cable_migrate
