--- a/config/database.yml
+++ b/config/database.yml
@@ -16,7 +16,9 @@ test:
 
 production:
   primary: &primary_production
-    <<: *default
+    adapter: postgresql
+    encoding: unicode
+    pool: 5
     database: <%= ENV['DATABASE_URL'] %>
   cache:
     <<: *primary_production
